Add simple health check
